tests/baselines/reference/parserES5SymbolProperty1.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty1.ts(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty1.ts (1 errors) ====
    interface I {
        [Symbol.iterator]: string;
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }